# Test_Giskard

./: .gitignore  README.md  main.py  pyproject.toml
data/: MM.txt  evaluation_report.json  testset.json  testset.jsonl
data/chroma_db/: chroma.sqlite3
data/rag_evaluation_report/: agent_answer.json  knowledge_base.jsonl  knowledge_base_meta.json  metrics_results.json  report.html  report_details.json  testset.jsonl
data/rag_evaluation_report_gemini/: agent_answer.json  knowledge_base_meta.json  metrics_results.json  report.html  report_details.json  testset.jsonl
data/rag_evaluation_report_groq/: agent_answer.json  knowledge_base_meta.json  metrics_results.json  report.html  report_details.json  testset.jsonl
data/rag_evaluation_report_qroq/: knowledge_base_meta.json  report_groq.html
source/: evaluate_rag.py  evaluate_rag2.py  evaluate_rag2_gemini.py  evaluate_rag2_groq.py  generate_questions.py  knowledge_base.py  llm_client.py  logger.py  rag_system.py  view_questions.py
source/test/: evaluate_rag2_gemini.py  evaluate_rag2_groq.py  list_models.py  test_gemini.py  test_rag.py
