[project]
name = "test-giskard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "giskard[llm]>=2.18.0",
    "google-genai>=0.3.0",
    "python-dotenv>=1.2.1",
    "pandas>=2.0.0",
    "groq>=0.4.0",
    "fastembed<0.7.3",
    "pyarrow>=12.0.0,<15.0.0",
    "datasets>=2.14.0,<3.0.0",
    "ragas",
    "structlog>=24.1.0",
    "sentence-transformers>=5.2.2",
    "langchain-community>=0.3.21",
    "langchain-text-splitters>=0.3.11",
    "chromadb>=1.4.1",
    "openai>=2.15.0",
]
