[project]
name = "test-giskard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "giskard[llm]>=2.18.0",
    "python-dotenv>=1.2.1",
    "pyarrow>=12.0.0,<15.0.0",
    "datasets>=2.14.0,<3.0.0",
    "structlog>=24.1.0",
    "sentence-transformers>=5.2.2",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.0.0",
    "chromadb>=1.4.1",
    "openai>=2.15.0",
    "langchain>=1.2.7",
    "langchain-text-splitters>=0.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-huggingface>=1.2.0",
    "litellm>=1.65.8",
    "langchain-openai>=1.1.7",
    "google-genai>=1.59.0",
    "groq>=1.0.0",
    "fastembed>=0.7.4",
    "ragas>=0.3.2",
    "langchain-community>=0.4.1",
    "pandas>=2.3.3",
]
